--- a/assets/sass/pages/community/_communityHome.scss
+++ b/assets/sass/pages/community/_communityHome.scss
@@ -66,7 +66,8 @@
                 }
             }
         }
-        .locaiton {
+        .locaiton,
+        .mutual-friend {
             font-size: 15px;
             color: #6B7C8F;
             @media (max-width: 1200px) {
