--- a/assets/sass/pages/community/_settings.scss
+++ b/assets/sass/pages/community/_settings.scss
@@ -81,7 +81,7 @@
         margin-bottom: 10px;
         font-weight: 400;
     }
-    input, select {
+    input, .nice-select {
         width: 100%;
         height: 50px;
         background:#F4F7FC;
@@ -94,13 +94,20 @@
         margin-bottom: 20px;
         font-weight: 400;
         transition: all .3s ease;
+        line-height: 28px;
         &:focus{
             outline: 1px solid $theme-color;
             &::placeholder{
                 color: transparent;
             }
         }
-    }
+        .list {
+            width: 100%;
+            .option {
+                margin: 0;
+            }
+        }
+    }    
     .notification-check-list {
         margin-bottom: 25px;
         li {
